--- a/4.4.html
+++ b/4.4.html
@@ -8,7 +8,7 @@
 <script>
     var i = 1;
     while (i<100) {
-        document.write("<hr width = " + i + "0>" );
+        document.write("<hr width = " + i + "%>" );
         i++;
     }
 </script>
